IMPALA-2798: After adding a column to avro table, Impala returns weird result if codegen is enabled.

Change-Id: Iac4b15376f276b07ae1359ad43e03f55f130ec98
(cherry picked from commit 4edd646ee32f65b7f62980363b42910929e5a7f9)
Reviewed-on: http://gerrit.cloudera.org:8080/2322
Reviewed-by: Juan Yu <jyu@cloudera.com>
Tested-by: Anuj Phadke <aphadke@cloudera.com>