thirdparty/avro-c-1.7.4/src/schema_equal.c
@@ -39,6 +39,10 @@ schema_record_equal(struct avro_record_schema_t *a,
 		/* One has a namespace, one doesn't */
 		return 0;
 	}
+	if (a->fields->num_entries != b->fields->num_entries) {
+		/* They have different numbers of fields */
+		return 0;
+	}
 	for (i = 0; i < a->fields->num_entries; i++) {
 		union {
 			st_data_t data;
